Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25808

'move definition out of class' broken with template specialization

XMLWordPrintable

    • c5d080570b7b8e85307b94cd4a9f5855a562b10d (qt-creator/qt-creator/5.0)

      consider:

      template <typename T>
      class base
      {};
      
      template <>
      class base<int>
      {
      public:
          void bar() const
          {}
      };
      

      moving `bar()` outside of the class via "refactoring" gives me:

      template<>
      void base<int><>::bar() const
      {}
      

      this is invalid. it should be:

      void base<int>::bar() const
      {}
      

      (same applies to "add definition outside of class")

        For Gerrit Dashboard: QTCREATORBUG-25808
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes